Updated pom.xml