@@ -17,50 +17,16 @@
    <modules> 
       <module>fitnesse-teamcity</module>
       <module>fitnesse-rc</module>
+      <module>fitnesse-assemble</module>
    </modules>
-   <properties>
-      <jdk.version>1.6</jdk.version>
-   </properties>
    
-   <dependencyManagement>
-      <dependencies>
-         <dependency>
-            <groupId>org.fitnesse</groupId>
-            <artifactId>fitnesse</artifactId>
-            <version>20090709-SNAPSHOT</version>
-         </dependency>
-         <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>5.9</version>
-         </dependency>
-      </dependencies>
-   </dependencyManagement>
-
    <build>
       <plugins>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-         </plugin>
-
          <!-- Retrieve the current workspace revision and store it under ${buildNumber} -->
          <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>buildnumber-maven-plugin</artifactId>
          </plugin>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-jar-plugin</artifactId>
-         </plugin>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-source-plugin</artifactId>
-         </plugin>
-         <!--<plugin>-->
-         <!--<groupId>com.sabre.liberty</groupId>-->
-         <!--<artifactId>cobertura-maven-plugin</artifactId>-->
-         <!--</plugin>-->
          <plugin>
             <artifactId>maven-release-plugin</artifactId>
             <!--<configuration>-->
@@ -71,30 +37,6 @@
 
       <pluginManagement>
          <plugins>
-            <plugin>
-               <groupId>org.apache.maven.plugins</groupId>
-               <artifactId>maven-compiler-plugin</artifactId>
-               <configuration>
-                  <source>${jdk.version}</source>
-                  <target>${jdk.version}</target>
-               </configuration>
-            </plugin>
-            <plugin>
-               <groupId>org.apache.maven.plugins</groupId>
-               <artifactId>maven-surefire-plugin</artifactId>
-               <configuration>
-                  <forkMode>once</forkMode>
-                  <!-- Add -verbose:class to trace what jar a class was loaded from -->
-                  <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m</argLine>
-                  <!-- Instrumented classes should by used for testing !  -->
-                  <classesDirectory>target/generated-classes/cobertura</classesDirectory>
-                  <classesDirectory>target/classes</classesDirectory>
-                  <includes>
-                     <include>**/Test*.java</include>
-                     <include>**/*Test.java</include>
-                  </includes>
-               </configuration>
-            </plugin>
             <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
@@ -129,6 +71,7 @@
                   </execution>
                </executions>
             </plugin>
+             
             <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
@@ -161,65 +104,7 @@
                   </execution>
                </executions>
             </plugin>
-            <plugin>
-               <groupId>com.sabre.liberty</groupId>
-               <artifactId>cobertura-maven-plugin</artifactId>
-               <version>2.2-PATCHED-U1</version>
-               <executions>
-                  <execution>
-                     <id>cobertura-instrument</id>
-                     <phase>test-compile</phase>
-                     <goals>
-                        <goal>instrument</goal>
-                     </goals>
-                  </execution>
-                  <execution>
-                     <goals>
-                        <goal>clean</goal>
-                        <goal>check</goal>
-                     </goals>
-                  </execution>
-               </executions>
-               <configuration>
-                  <instrumentation>
-                     <ignoreTrivial>true</ignoreTrivial>
-                     <ignoreMethods>
-                        <ignoreMethod>main</ignoreMethod>
-                     </ignoreMethods>
-                  </instrumentation>
-                  <check>
-                     <branchRate>0</branchRate>
-                     <lineRate>0</lineRate>
-                     <packageLineRate>0</packageLineRate>
-                     <packageBranchRate>0</packageBranchRate>
-                     <totalLineRate>0</totalLineRate>
-                     <totalBranchRate>0</totalBranchRate>
-                     <haltOnFailure>false</haltOnFailure>
-                  </check>
-               </configuration>
-            </plugin>
 
-            <plugin>
-               <inherited>true</inherited>
-               <groupId>org.codehaus.groovy.maven</groupId>
-               <artifactId>gmaven-plugin</artifactId>
-               <version>1.0-rc-3</version>
-               <executions>
-                  <execution>
-                     <goals>
-                        <goal>generateStubs</goal>
-                        <goal>compile</goal>
-                        <goal>generateTestStubs</goal>
-                        <goal>testCompile</goal>
-                     </goals>
-                  </execution>
-               </executions>
-            </plugin>
-
-            <plugin>
-               <groupId>org.apache.maven.plugins</groupId>
-               <artifactId>maven-surefire-plugin</artifactId>
-            </plugin>
             <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
@@ -250,39 +135,4 @@
          </plugins>
       </pluginManagement>
    </build>
-   <reporting>
-      <plugins>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-checkstyle-plugin</artifactId>
-            <configuration>
-               <configLocation>checkstyle.xml</configLocation>
-               <suppressionsLocation>suppressions.xml</suppressionsLocation>
-               <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
-               <failOnViolation>true</failOnViolation>
-               <violationSeverity>warning</violationSeverity>
-            </configuration>
-         </plugin>
-         <!--
-                  <plugin>
-                     <groupId>org.apache.maven.plugins</groupId>
-                     <artifactId>maven-pmd-plugin</artifactId>
-                     <configuration>
-                        <targetJdk>${jdk.version}</targetJdk>
-                     </configuration>
-                  </plugin>
-         -->
-         <plugin>
-            <groupId>com.sabre.liberty</groupId>
-            <artifactId>cobertura-maven-plugin</artifactId>
-            <version>2.2-PATCHED-U1</version>
-         </plugin>
-         <!--
-                  <plugin>
-                     <groupId>org.codehaus.mojo</groupId>
-                     <artifactId>jdepend-maven-plugin</artifactId>
-                  </plugin>
-         -->
-      </plugins>
-   </reporting>
 </project>
